--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,7 +5,7 @@ description = "Automated Football Tactical Analysis Backend"
 authors = ["Your Name <you@example.com>"]
 
 [tool.poetry.dependencies]
-python = "^3.11"
+python = ">=3.10,<3.13"
 fastapi = "^0.109.0"
 uvicorn = "^0.27.0"
 sqlalchemy = "^2.0.0"
@@ -22,11 +22,13 @@ scipy = "^1.12.0"
 ultralytics = "^8.1.0"
 torch = "^2.2.0"
 opencv-python-headless = "^4.9.0"
-crewai = "^0.19.0"
-langchain = "^0.1.0"
-chromadb = "^0.4.0"
+crewai = "*"
+langchain = "*"
+chromadb = "*"
 minio = "^7.2.0"
 prometheus-client = "^0.19.0"
+pyarrow = "^14.0.0"
+psycopg2-binary = "^2.9.0"
 
 [tool.poetry.group.dev.dependencies]
 pytest = "^8.0.0"
