--- a/backend/docker/Dockerfile.api
+++ b/backend/docker/Dockerfile.api
@@ -10,8 +10,8 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
     && rm -rf /var/lib/apt/lists/*
 
 # Install pip dependencies explicitly to avoid Poetry resolution issues in Docker
-COPY requirements.txt /app/
-RUN pip install --default-timeout=1000 --no-cache-dir -r requirements.txt
+COPY requirements-api.txt /app/
+RUN pip install --default-timeout=1000 --no-cache-dir -r requirements-api.txt
 
 # Copy application code
 COPY . /app
