--- a/backend/docker/Dockerfile.gpu
+++ b/backend/docker/Dockerfile.gpu
@@ -13,16 +13,10 @@ RUN apt-get update && apt-get install -y --no-install-recommends \
 # Link python3 to python
 RUN ln -s /usr/bin/python3 /usr/bin/python
 
-# Install poetry via pip
-RUN pip3 install poetry
-
-# Copy dependency definition
-COPY pyproject.toml poetry.lock* /app/
-
-# Install dependencies
-RUN poetry config virtualenvs.create false \
-    && poetry install --no-interaction --no-ansi --no-root \
-    && pip3 install torch torchvision --index-url https://download.pytorch.org/whl/cu118
+# Install dependencies (pip)
+COPY requirements-worker.txt requirements-api.txt /app/
+RUN pip3 install --default-timeout=1000 --no-cache-dir -r requirements-worker.txt \
+    && pip3 install --default-timeout=1000 torch torchvision --index-url https://download.pytorch.org/whl/cu118
 
 # Copy application code
 COPY . /app
