feat: Implement asynchronous task processing with Celery for AI analysis and expand end-to-end test suite.

--- a/backend/requirements-api.txt
+++ b/backend/requirements-api.txt
@@ -15,3 +15,7 @@ redis>=5.0.0
 
 # Observability
 prometheus-client>=0.19.0
+
+# Dependencies required for some Use Case imports (even if logic is minimal)
+numpy>=1.26.0
+statsbombpy>=1.13.0
