--- a/backend/requirements-worker.txt
+++ b/backend/requirements-worker.txt
@@ -8,6 +8,7 @@ pandas>=2.2.0
 pyarrow>=14.0.0
 numpy>=1.26.0
 scipy>=1.12.0
+scikit-learn>=1.4.0
 
 # Storage
 minio>=7.2.0
@@ -18,6 +19,7 @@ statsbombpy>=1.12.0
 # AI/ML Stack
 crewai
 langchain
+langchain_openai
 chromadb
 
 # Computer Vision (for GPU worker)
