--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -20,6 +20,7 @@ numpy = "^1.26.0"
 pandas = "^2.2.0"
 scipy = "^1.12.0"
 ultralytics = "^8.1.0"
+scikit-learn = "^1.4.0"
 torch = "^2.2.0"
 opencv-python-headless = "^4.9.0"
 crewai = "*"
