--- a/backend/requirements-api.txt
+++ b/backend/requirements-api.txt
@@ -19,3 +19,5 @@ prometheus-client>=0.19.0
 # Dependencies required for some Use Case imports (even if logic is minimal)
 numpy>=1.26.0
 statsbombpy>=1.13.0
+minio>=7.2.0
+
