feat: Introduce CrewAI multi-agent match analysis, context generation service, and API endpoint.

--- a/backend/requirements-api.txt
+++ b/backend/requirements-api.txt
@@ -21,3 +21,7 @@ numpy>=1.26.0
 statsbombpy>=1.13.0
 minio>=7.2.0
 
+# AI/ML Stack (Required for Streaming API)
+crewai
+langchain_openai
+langchain-google-genai
