feat: Finalize RAG integration by adding indexing triggers, context retrieval to the match service, and comprehensive integration tests.

--- a/backend/requirements-api.txt
+++ b/backend/requirements-api.txt
@@ -25,3 +25,7 @@ minio>=7.2.0
 crewai
 langchain_openai
 langchain-google-genai
+
+# RAG (Required for indexing API endpoints)
+chromadb
+sentence-transformers
