--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,33 +10,44 @@
     "test": "vitest"
   },
   "dependencies": {
+    "@radix-ui/react-dialog": "^1.1.15",
+    "@radix-ui/react-scroll-area": "^1.2.10",
+    "@radix-ui/react-select": "^2.2.6",
+    "@radix-ui/react-separator": "^1.1.8",
+    "@radix-ui/react-slider": "^1.3.6",
+    "@radix-ui/react-slot": "^1.2.4",
+    "@radix-ui/react-tabs": "^1.1.13",
+    "@radix-ui/react-tooltip": "^1.2.8",
+    "@tanstack/react-query": "^5.0.0",
+    "axios": "^1.6.0",
+    "class-variance-authority": "^0.7.0",
+    "clsx": "^2.1.0",
+    "d3": "^7.9.0",
+    "html2canvas": "^1.4.1",
+    "jspdf": "^4.0.0",
+    "lucide-react": "^0.300.0",
+    "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
-    "next": "14.1.0",
-    "lucide-react": "^0.300.0",
-    "tailwindcss": "^3.3.0",
-    "clsx": "^2.1.0",
-    "tailwind-merge": "^2.2.0",
-    "class-variance-authority": "^0.7.0",
-    "axios": "^1.6.0",
-    "@tanstack/react-query": "^5.0.0",
-    "zustand": "^4.5.0",
     "react-player": "^2.14.0",
     "recharts": "^2.10.0",
-    "@radix-ui/react-slot": "^1.0.0"
+    "tailwind-merge": "^2.2.0",
+    "tailwindcss": "^3.3.0",
+    "tailwindcss-animate": "^1.0.7",
+    "zustand": "^4.5.0"
   },
   "devDependencies": {
-    "typescript": "^5",
+    "@testing-library/react": "^14.1.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "@vitejs/plugin-react": "^4.2.0",
     "autoprefixer": "^10.0.1",
-    "postcss": "^8",
     "eslint": "^8",
     "eslint-config-next": "14.1.0",
-    "vitest": "^1.2.0",
-    "@vitejs/plugin-react": "^4.2.0",
     "jsdom": "^24.0.0",
-    "@testing-library/react": "^14.1.0"
+    "postcss": "^8",
+    "typescript": "^5",
+    "vitest": "^1.2.0"
   }
 }
