--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,6 +29,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-markdown": "^10.1.0",
     "react-player": "^2.14.0",
     "recharts": "^2.10.0",
     "tailwind-merge": "^2.2.0",
