--- a/backend/requirements-api.txt
+++ b/backend/requirements-api.txt
@@ -18,6 +18,8 @@ prometheus-client>=0.19.0
 
 # Dependencies required for some Use Case imports (even if logic is minimal)
 numpy>=1.26.0
+pandas>=2.0.0
+pyarrow>=14.0.0
 statsbombpy>=1.13.0
 minio>=7.2.0
 
